[package]
name = "iog_chain"
version = "0.1.0"
authors= ["Sougata Bhattacharjee <sougata.bhattacharjee94@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
crypto-hash = "0.3.4"
hex = "0.4.3"
futures = "0.3.19"
actix-rt = "2.5.1"
